fixed overlapping text on mobile version

--- a/scss/pages/roomDetails/_roomDetails-intro.scss
+++ b/scss/pages/roomDetails/_roomDetails-intro.scss
@@ -399,6 +399,7 @@ hr {
 }
 
 .checkin-info {
+    margin: 40px 0 20px 0;
     text-align: center;
     @include desktop {
         h1 {
